# dagster-serde

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
dagster_serde/: __init__.py  _version.py  utils.py
dagster_serde/io_managers/: base.py  json.py  utils.py  yaml.py
docs/: examples.md
tests/: conftest.py  data.py  strategies.py  test_io_managers.py  test_json.py  test_yaml.py
