[project]
name = "dagster-serde"
description = "Dagster library for ser/de of data"
authors = [{ name = "Daniel Gafni", email = "danielgafni16@gmail.com" }]
requires-python = ">=3.9"
dependencies = [
    "dagster>=1.10.0",
    "orjson>=3.9.8",
    "pyserde>=0.12.3",
    "pyyaml>=4.0.0",
    "typing-extensions>=4.7.1",
]
dynamic = ["version"]

[dependency-groups]
dev = [
    "blacken-docs>=1.16.0",
    "dagit>=1.3.9",
    "deepdiff>=6.3.0",
    "dunamai>=1.23.0",
    "hatch>=1.14.0",
    "hypothesis>=4.0.0",
    "ipython>=8.18.1",
    "isort>=5.12.0",
    "pre-commit>=3.3.2",
    "pyright>=1.1.313",
    "pytest>=7.3.1",
    "pytest-cases>=3.6.14",
    "pytest-rerunfailures>=12.0",
    "ruff>=0.9.0",
    "tox>=4.6.0",
    "tox-gh>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "dagster_serde/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["dagster_serde"]

[tool.poetry-dynamic-versioning.substitution]
files = [
    "pyproject.toml",
    "dagster_serde/_version.py"
]

[tool.pytest.ini_options]
log_cli = true
log_level = "INFO"

[tool.ruff]
line-length = 120
src = [
    "dagster_serde",
    "tests"
]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.lint.isort]
known-first-party = ["dagster_serde", "tests"]

[tool.pyright]
reportPropertyTypeMismatch = true
reportImportCycles = true
reportWildcardImportFromLibrary = true
reportUntypedFunctionDecorator = true
reportUntypedClassDecorator = true

include = [
    "dagster_serde",
    "tests"
]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
